--- a/Style/Sass/main.scss
+++ b/Style/Sass/main.scss
@@ -1,3 +1,41 @@
+$titelSize : 2.5em;
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: #000;
+    background-color: #111;
+    // height: 200vh;
+
+}
+
+header {
+
+    height: 100vh;
+    height: 100svh;
+}
+
+.name-role {
+    position: relative;
+    top: 30vh;
+    transform: translate(0%, -50%);
+    display: inline-block;
+    width: 45vw;
+    padding: 0px 50px;
+    // background-color: #AAA;
+}
+
+.welcom-msg {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: $titelSize;
+    color: #fff;
+}
+
+.name-role-text {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: $titelSize;
+    color: #fff;
 }
