--- a/Style/Sass/main.scss
+++ b/Style/Sass/main.scss
@@ -7,23 +7,21 @@ $titelSize : 2.5em;
 
 body {
     background-color: #111;
-    // height: 200vh;
+    height: 200vh;
 
 }
 
 header {
 
-    height: 100vh;
-    height: 100svh;
+    position: relative;
 }
 
 .name-role {
-    position: relative;
+    position: absolute;
     top: 30vh;
-    transform: translate(0%, -50%);
-    display: inline-block;
     width: 45vw;
-    padding: 0px 50px;
+    display: inline-block;
+    margin-left: clamp(10px, 13vw, 100px);
     // background-color: #AAA;
 }
 
@@ -38,4 +36,55 @@ header {
     font-weight: bolder;
     font-size: $titelSize;
     color: #fff;
+}
+
+.contact-me-1 {
+    position: absolute;
+    top: 14px;
+    right: 15px;
+    background-color: orange;
+    height: 3.5em;
+    width: 9rem;
+    border-radius: 7px;
+    font-size: large;
+    color: #fff;
+    text-shadow: 2px 2px 8px rgba(black, .4), -2px -2px 8px rgba(black, .4);
+    // box-shadow: inset 0 0 4px rgb(79, 50, 0);
+}
+
+.socialHolder {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    right: 0;
+}
+
+.socialHolder::before {
+    content: "";
+    background-color: #cfc4d4;
+    position: relative;
+    z-index: -1;
+    top: 25vh;
+    width: 60px;
+    height: 50vh;
+    border-radius: 15px 0 0 15px;
+}
+
+.socialIconHolder {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 25vh;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50vh;
+}
+
+
+
+.socialIcon {
+    position: relative;
+    height: 3em;
+    width: 3em;
 }
