all the scss structchr is set

--- a/Style/Sass/main.scss
+++ b/Style/Sass/main.scss
@@ -1,90 +1,6 @@
-$titelSize : 2.5em;
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: #111;
-    height: 200vh;
-
-}
-
-header {
-
-    position: relative;
-}
-
-.name-role {
-    position: absolute;
-    top: 30vh;
-    width: 45vw;
-    display: inline-block;
-    margin-left: clamp(10px, 13vw, 100px);
-    // background-color: #AAA;
-}
-
-.welcom-msg {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: $titelSize;
-    color: #fff;
-}
-
-.name-role-text {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    font-size: $titelSize;
-    color: #fff;
-}
-
-.contact-me-1 {
-    position: absolute;
-    top: 14px;
-    right: 15px;
-    background-color: orange;
-    height: 3.5em;
-    width: 9rem;
-    border-radius: 7px;
-    font-size: large;
-    color: #fff;
-    text-shadow: 2px 2px 8px rgba(black, .4), -2px -2px 8px rgba(black, .4);
-    // box-shadow: inset 0 0 4px rgb(79, 50, 0);
-}
-
-.socialHolder {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    right: 0;
-}
-
-.socialHolder::before {
-    content: "";
-    background-color: #cfc4d4;
-    position: relative;
-    z-index: -1;
-    top: 25vh;
-    width: 60px;
-    height: 50vh;
-    border-radius: 15px 0 0 15px;
-}
-
-.socialIconHolder {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 25vh;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 50vh;
-}
-
-
-
-.socialIcon {
-    position: relative;
-    height: 3em;
-    width: 3em;
-}
+@use "./base/rest";
+@use "./components/buttons";
+@use "./components/socialCard";
+@use "./components/cards";
+@use "./layout/header";
+// @use "./";
