--- a/Style/Sass/main.scss
+++ b/Style/Sass/main.scss
@@ -3,4 +3,6 @@
 @use "./components/socialCard";
 @use "./components/cards";
 @use "./layout/header";
+@use "./layout/about";
+@use "./layout/skills";
 // @use "./";
