--- a/Style/Sass/components/_buttons.scss
+++ b/Style/Sass/components/_buttons.scss
@@ -6,11 +6,56 @@
     top: 14px;
     right: 15px;
     background-color: $color-accent-1;
-    height: 3.5em;
-    width: 9rem;
-    border-radius: 7px;
     font-size: $font-size-secondair;
-    color: #fff;
-    text-shadow: 2px 2px 8px rgba(black, .4), -2px -2px 8px rgba(black, .4);
-    // box-shadow: inset 0 0 4px rgb(79, 50, 0);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-me-1:hover {
+    background-color: #0056b3;
+    /* Darker blue on hover */
+    transform: translateY(-2px);
+    /* Add a slight upward movement */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.about {
+    .resume-button {
+        position: absolute;
+        right: 0em;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #643BBA;
+        font-size: $font-size-secondair;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 20px;
+        font-size: 18px;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease-in-out;
+    }
+
+    .resume-button:hover {
+        background-color: #0056b3;
+        /* Darker blue on hover */
+        transform: translate(-50%, calc(-50% - 4px));
+        /* Add a slight upward movement */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
 }
