--- a/Style/Sass/layout/_header.scss
+++ b/Style/Sass/layout/_header.scss
@@ -1,7 +1,8 @@
 @use "../abstracts" as *;
+@use "../base/animation" as *;
 
 header {
-
+    height: 100vh;
     position: relative;
 }
 
@@ -31,7 +32,7 @@ header {
 
     z-index: -10;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     // height: 100svh;
 }
 
@@ -43,12 +44,14 @@ header {
     width: 2.5em;
     height: 2.5em;
     border-radius: 50%;
+    cursor: pointer;
 
     img {
         position: absolute;
         width: 2em;
         top: .25em;
         left: .25em;
+        transition: 300ms ease-in-out;
 
     }
 
@@ -60,10 +63,20 @@ header {
         color: white;
         font-weight: 800;
     }
+
+    img:hover {
+        transform: scale(.9) rotate(20deg);
+    }
 }
 
 .scrole {
     position: absolute;
+    // visibility: hidden;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 40px;
-    box-shadow: 0 0 0 10px  #C1D82F;
+    filter: invert(100%);
+    animation: scroleUpDown 2s linear infinite;
+
 }
