--- a/Style/css/main.css
+++ b/Style/css/main.css
@@ -303,10 +303,35 @@ header {
   gap: 15px;
 }
 .my-skills-container .my-skills .skill-card .skills-place .skill-row {
+  font-weight: bolder;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
-  gap: 15px;
   align-items: center;
 }
+.my-skills-container .my-skills .skill-card .skills-place .skill-row .css-icon {
+  transform: translate(7px, 3px) rotate(18deg);
+  position: absolute;
+  z-index: 2;
+}
+.my-skills-container .my-skills .skill-card .skills-place .skill-row .html-icon {
+  transform: translate(-14px) rotate(-14deg);
+  position: absolute;
+}
+.my-skills-container .my-skills .skill-card .skills-place .skill-row .react-native {
+  width: 50px;
+  transform: translate(-5px);
+  margin-right: 5px;
+}
+.my-skills-container .my-skills .skill-card .skills-place .skill-row .skill-icon {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin-right: 15px;
+}
+.my-skills-container .my-skills .skill-card .skills-place .skill-row .my-sql {
+  filter: contrast(0) brightness(100);
+}
 .my-skills-container .my-skills .skill-card .skills-place .skill-row img {
+  margin-right: 15px;
   width: 40px;
 }
