--- a/Style/Sass/components/_buttons.scss
+++ b/Style/Sass/components/_buttons.scss
@@ -1,6 +1,7 @@
 @use '../abstracts' as *;
 
 .contact-me-1 {
+    z-index: 1;
     position: absolute;
     font-family: $font-button;
     top: 14px;
